--- a/example-argocd.yml
+++ b/example-argocd.yml
@@ -6,5 +6,13 @@ metadata:
   labels:
     example: basic
     test: label
-spec: {}
+spec: 
+  redis:
+    resources:
+      limits:
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
+
 
