--- a/example-argocd.yml
+++ b/example-argocd.yml
@@ -14,5 +14,13 @@ spec:
       requests:
         cpu: 250m
         memory: 256Mi
+  ha:
+    enabled: true
+    resources:
+      limits:
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
 
 
